--- a/swagger-templates/src/main/resources/OktaJavaImpl/apiMethodPost.mustache
+++ b/swagger-templates/src/main/resources/OktaJavaImpl/apiMethodPost.mustache
@@ -13,5 +13,5 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 }}
-
-    {{#returnType}}return {{/returnType}}getDataStore().{{vendorExtensions.dsMethod}}(href, {{#bodyParam}}{{bodyParam.paramName}}{{/bodyParam}}{{^bodyParam}}new VoidResource(getDataStore()){{/bodyParam}}{{#returnType}}, {{returnType}}.class{{/returnType}});
+// POST
+    {{#returnType}}return {{/returnType}}getDataStore().{{vendorExtensions.dsMethod}}(href, {{#vendorExtensions.bodyIsSelf}}this{{/vendorExtensions.bodyIsSelf}}{{^vendorExtensions.bodyIsSelf}}{{bodyParam.paramName}}{{/vendorExtensions.bodyIsSelf}}{{^bodyParam}}new VoidResource(getDataStore()){{/bodyParam}}{{#returnType}}, {{returnType}}.class{{/returnType}});
