--- a/swagger-templates/src/main/resources/OktaJava/modelInterface.mustache
+++ b/swagger-templates/src/main/resources/OktaJava/modelInterface.mustache
@@ -61,6 +61,10 @@ public interface {{classname}} extends Resource{{#vendorExtensions.x-oktaDynamic
     * @return {{returnType}}
     {{/returnType}}
     */
+    @javax.annotation.Generated(
+            value    = "{{generatorClass}}",
+            date     = "{{generatedDate}}",
+            comments = "{{path}}")
     {{#returnType}}{{{returnType}}} {{/returnType}}{{^returnType}}void {{/returnType}}{{#vendorExtensions.alias}}{{vendorExtensions.alias}}{{/vendorExtensions.alias}}{{^vendorExtensions.alias}}{{operationId}}{{/vendorExtensions.alias}}({{#vendorExtensions.allParams}}{{{dataType}}} {{paramName}}{{#hasMore}}, {{/hasMore}}{{/vendorExtensions.allParams}});
 
 {{#vendorExtensions.hasOptional}}
@@ -74,6 +78,10 @@ public interface {{classname}} extends Resource{{#vendorExtensions.x-oktaDynamic
     * @return {{returnType}}
     {{/returnType}}
     */
+    @javax.annotation.Generated(
+            value    = "{{generatorClass}}",
+            date     = "{{generatedDate}}",
+            comments = "{{path}}")
     {{#returnType}}{{{returnType}}} {{/returnType}}{{^returnType}}void {{/returnType}}{{#vendorExtensions.alias}}{{vendorExtensions.alias}}{{/vendorExtensions.alias}}{{^vendorExtensions.alias}}{{operationId}}{{/vendorExtensions.alias}}({{#vendorExtensions.nonOptionalParams}}{{{dataType}}} {{paramName}}{{#hasMore}}, {{/hasMore}}{{/vendorExtensions.nonOptionalParams}});
 
 {{/vendorExtensions.hasOptional}}{{/.}}{{/vendorExtensions.operations}}
@@ -89,6 +97,10 @@ public interface {{classname}} extends Resource{{#vendorExtensions.x-oktaDynamic
     * @return {{returnType}}
     {{/returnType}}
     */
+    @javax.annotation.Generated(
+        value    = "{{generatorClass}}",
+        date     = "{{generatedDate}}",
+        comments = "{{path}}")
     {{#returnType}}{{{returnType}}} {{/returnType}}{{^returnType}}void {{/returnType}}{{operationId}}({{#allParams}}{{{dataType}}} {{paramName}}{{#hasMore}}, {{/hasMore}}{{/allParams}});
 
 {{#vendorExtensions.hasOptional}}
@@ -102,6 +114,10 @@ public interface {{classname}} extends Resource{{#vendorExtensions.x-oktaDynamic
     * @return {{returnType}}
     {{/returnType}}
     */
+    @javax.annotation.Generated(
+            value    = "{{generatorClass}}",
+            date     = "{{generatedDate}}",
+            comments = "{{path}}")
     {{#returnType}}{{{returnType}}} {{/returnType}}{{^returnType}}void {{/returnType}}{{operationId}}({{#vendorExtensions.nonOptionalParams}}{{{dataType}}} {{paramName}}{{#hasMore}}, {{/hasMore}}{{/vendorExtensions.nonOptionalParams}});
 {{/vendorExtensions.hasOptional}}{{/vendorExtensions.moved}}{{/operation}}
 }
